[gd_scene load_steps=6 format=3 uid="uid://n1tb4tcmncyb"]

[ext_resource type="Script" uid="uid://c48daqvqi41cv" path="res://Entities/Enemy/Quadtopus/Quadtopus.gd" id="1_rv81n"]
[ext_resource type="Texture2D" uid="uid://br2dntco8abux" path="res://Entities/Enemy/Quadtopus/Quadtopus.png" id="2_j6e5w"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ik4k5"]
radius = 18.0
height = 66.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oie2v"]
size = Vector2(23, 23)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_truqn"]
size = Vector2(68, 15)

[node name="Quadtopus" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_rv81n")

[node name="hitbox" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
position = Vector2(0, 1)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_ik4k5")

[node name="TurnTimer" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -5.5)
shape = SubResource("RectangleShape2D_oie2v")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2(0, 10.5)
shape = SubResource("RectangleShape2D_truqn")

[node name="RightFloorCast" type="RayCast2D" parent="."]
position = Vector2(33, 0)
target_position = Vector2(0, 30)

[node name="LeftFloorCast" type="RayCast2D" parent="."]
position = Vector2(-33, 0)
target_position = Vector2(0, 30)

[node name="Quadtopus" type="Sprite2D" parent="."]
position = Vector2(0, -2)
texture = ExtResource("2_j6e5w")
hframes = 2
